--- a/privacy.html
+++ b/privacy.html
@@ -29,7 +29,7 @@
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
-                  identifiable information. The information that
+                  identifiable information including but not limited to names and photos. The information that
                   I request will be retained on your device and is not collected by me in any way.
                 </p> <div><p>
                     The app does use third-party services that may collect
