--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>App &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>Wikly &mdash; Wikly.app home page.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="description" content="Wikly.app Home Page" />
+	<meta name="keywords" content="Wikly, task, children, organize, plan, parent, teacher, tasks" />
+	<meta name="author" content="Harry Patsis" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -27,6 +27,7 @@
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="css/splide.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Animate.css -->
@@ -49,7 +50,8 @@
 
 	<div id="fh5co-hero-wrapper">
 		<nav class="container navbar navbar-expand-lg main-navbar-nav navbar-light">
-			<a class="navbar-brand" href="">App</a>
+			<img class="navbar-image" src="img/wikly.png" alt="wikly">
+			<a class="navbar-brand" href="">Wikly</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -70,19 +72,19 @@
 					</li>
 				</ul>
 				<div class="social-icons-header">
-					<a href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
-					<a href="https://freehtml5.co"><i class="fab fa-instagram"></i></a>
-					<a href="https://www.twitter.com/fh5co"><i class="fab fa-twitter"></i></a>
+					<!-- <a href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
+					<a href="https://freehtml5.co"><i class="fab fa-instagram"></i></a> -->
+					<a href="https://www.twitter.com/Wikly_app"><i class="fab fa-twitter"></i></a>
 				</div>
 			</div>
 		</nav>
 
 		<div class="container fh5co-hero-inner">
-			<h1 class="animated fadeIn wow" data-wow-delay="0.4s">A Free HTML5 App Template Built with Bootstrap 4</h1>
-			<p class="animated fadeIn wow" data-wow-delay="0.67s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et voluptates, aliquid soluta distinctio dolorum tenetur. </p>
+			<h1 class="animated fadeIn wow" data-wow-delay="0.4s">Your week into tasks!</h1>
+			<p class="animated fadeIn wow" data-wow-delay="0.67s">A visual daily and weekly planner for you, your family, your friends, your students, or even your colleagues. Focus more! </p>
 			<button class="btn btn-md download-btn-first wow fadeInLeft animated" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;">Download</button>
 			<button class="btn btn-md features-btn-first animated fadeInLeft wow" data-wow-delay="0.95s" onclick="$('#fh5co-features').goTo();return false;">Features</button>
-			<img class="fh5co-hero-smartphone animated fadeInRight wow" data-wow-delay="1s" src="img/phone-image.png" alt="Smartphone">
+			<img class="fh5co-hero-smartphone animated fadeInRight wow" data-wow-delay="1s" src="img/image1.png" alt="Smartphone">
 		</div>
 
 
@@ -95,29 +97,46 @@
 
 	<div class="fh5co-advantages-outer">
 		<div class="container">
-			<h1 class="second-title"><span class="span-perfect">Perfect</span> <span class="span-features">Features</span></h1>
-			<small>Only necessary</small>
+			<h1 class="second-title"><span class="span-perfect">Wikly</span> <span class="span-features">features</span></h1>
+			<!-- <small>Only necessary</small> -->
 
 			<div class="row fh5co-advantages-grid-columns wow animated fadeIn" data-wow-delay="0.36s">
 
 				<div class="col-sm-4">
-					<img class="grid-image" src="img/icon-1.png" alt="Icon-1">
-					<h1 class="grid-title">Usability</h1>
-					<p class="grid-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cupiditate.</p>
+					<img class="grid-image" src="img/gear.png" alt="Icon-1">
+					<h1 class="grid-title">Organize everything</h1>
+					<p class="grid-desc">Organize your daily and weekly tasks in one easy to use app.</p>
 				</div>
 
 				<div class="col-sm-4">
-					<img class="grid-image" src="img/icon-2.png" alt="Icon-2">
-					<h1 class="grid-title">Parallax Effect</h1>
-					<p class="grid-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cupiditate.</p>
+					<img class="grid-image" src="img/timeline.png" alt="Icon-2">
+					<h1 class="grid-title">A smart daily planner</h1>
+					<p class="grid-desc">Multiple visual ways to manage and view your daily tasks for greater efficiency.</p>
 				</div>
 
 				<div class="col-sm-4">
-					<img class="grid-image" src="img/icon-3.png" alt="Icon-3">
-					<h1 class="grid-title">Unlimited Colors</h1>
-					<p class="grid-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cupiditate.</p>
+					<img class="grid-image" src="img/bulb.png" alt="Icon-3">
+					<h1 class="grid-title">Easy to use</h1>
+					<p class="grid-desc">Create tasks in seconds by choosing people, title, time, and duration.</p>
 				</div>
 
+				<div class="col-sm-4">
+					<img class="grid-image" src="img/diamond.png" alt="Icon-1">
+					<h1 class="grid-title">Beautiful design</h1>
+					<p class="grid-desc">Your daily and weekly schedule at a glance. Elegant. Simple.</p>
+				</div>
+
+				<div class="col-sm-4">
+					<img class="grid-image" src="img/alarm.png" alt="Icon-1">
+					<h1 class="grid-title">Reminders & widgets</h1>
+					<p class="grid-desc">Stay on top of everything with reminders and widgets. Never miss a task again!</p>
+				</div>
+				
+				<div class="col-sm-4">
+					<img class="grid-image" src="img/productivity.png" alt="Icon-1">
+					<h1 class="grid-title">Maximize productivity</h1>
+					<p class="grid-desc">Keep track of everything and manage the workload to get through it efficiently and effectively.</p>
+				</div>
 
 			</div>
 		</div>
@@ -128,17 +147,20 @@
 													  SLIDER
 		 ========================================================================================================== -->
 
-	<div class="fh5co-slider-outer wow fadeIn" data-wow-delay="0.36s">
-		<h1>SIMPLE WIDGETS</h1>
-		<small>Drag and Drop</small>
+	<div class="fh5co-slider-outer wow fadeIn" data-wow-delay="0.86s">
+		<h1><span class="span-wikly">Wikly</span> <span class="span-action">in action</span></h1>
+		<!-- <small>Drag and Drop</small> -->
 		<div class="container fh5co-slider-inner">
 
 			<div class="owl-carousel owl-theme">
-
-				<div class="item"><img src="img/smartphone-2.png" alt=""></div>
-				<div class="item"><img src="img/smartphone-2.png" alt=""></div>
-				<div class="item"><img src="img/iphone.png" alt=""></div>
-				<div class="item"><img src="img/smartphone-2.png" alt=""></div>
+				
+				<div class="item"><img src="img/image1.png" alt=""></div>
+				<div class="item"><img src="img/image2.png" alt=""></div>
+				<div class="item"><img src="img/image4.png" alt=""></div>
+				<div class="item"><img src="img/image5.png" alt=""></div>
+				<div class="item"><img src="img/image6.png" alt=""></div>
+				<div class="item"><img src="img/image7.png" alt=""></div>
+				<div class="item"><img src="img/image3.png" alt=""></div>				
 
 
 			</div>
@@ -158,49 +180,49 @@
 			<div class="row fh5co-features-grid-columns">
 
 				<div class="col-sm-6 in-order-1 wow animated fadeInLeft" data-wow-delay="0.22s">
-					<div class="col-sm-image-container">
-						<img class="img-float-left" src="img/smartphone-1.png" alt="smartphone-1">
-						<span class="span-new">NEW</span>
-						<span class="span-free">Free</span>
-					</div>
+					<img class="img-float-left" src="img/image1.png" alt="image1">
 				</div>
 
 				<div class="col-sm-6 in-order-2 sm-6-content wow animated fadeInRight" data-wow-delay="0.22s">
-					<h1>New Features</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor iste beatae ad adipisci, fugiat dignissimos pariatur, dolore nemo suscipit cum nisi earum voluptates nulla! </p>
-					<span class="circle circle-first"><i class="fab fa-instagram"></i></span>
-					<span class="circle circle-middle"><i class="fab fa-facebook"></i></span>
-					<span class="circle circle-last"><i class="fab fa-twitter"></i></span>
+					<h1>Your daily schedule at a glance</h1>
+					<p>Wikly is designed for those who seek a full-featured tool for managing their daily lives in a more efficient and effective manner. Organize your day/week into tasks so that you can focus on completing them one at a time.</p>
 				</div>
 
 				<div class="col-sm-6 in-order-3 sm-6-content wow animated fadeInLeft" data-wow-delay="0.22s">
-					<h1>REAL-TIME STATISTICS</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor iste beatae ad adipisci, fugiat dignissimos pariatur, dolore nemo suscipit cum nisi earum voluptates nulla! </p>
-					<span class="circle circle-first"><i class="fas fa-star"></i></span>
-					<span class="circle circle-middle"><i class="far fa-star"></i></span>
-					<span class="circle circle-last"><i class="far fa-thumbs-up"></i></span>
+					<h1>Organize your weekly routine</h1>
+					<p>Create and manage your team with family members, students, or even your colleagues. Schedule, assign, and keep track of each person's weekly tasks and errands with ease.</p>
 				</div>
 
 				<div class="col-sm-6 in-order-4 wow animated fadeInRight" data-wow-delay="0.22s">
-					<img class="img-float-right" src="img/smartphone-2.png" alt="smartphone-2">
+					<img class="img-float-right" src="img/image3.png" alt="image3">
 				</div>
 
-				<div class="col-sm-6 in-order-5 wow animated fadeInLeft" data-wow-delay="0.22s">
-					<div class="col-sm-image-container">
-						<img class="img-float-left" src="img/smartphone-2.png" alt="smartphone-3">
-						<span class="span-data">DATA</span>
-						<span class="span-percent">100%</span>
-					</div>
-				</div>
-				<div class="col-sm-6 in-order-6 sm-6-content wow animated fadeInRight" data-wow-delay="0.22s">
-					<h1>POWERFUL BACKEND</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor iste beatae ad adipisci, fugiat dignissimos pariatur, dolore nemo suscipit cum nisi earum voluptates nulla! </p>
-					<span class="circle circle-first">95%</span>
-					<span class="circle circle-middle"><i class="fas fa-forward"></i></span>
-					<span class="circle circle-last"><i class="fab fa-github"></i></span>
-
+				<div class="col-sm-6 in-order-1 wow animated fadeInLeft" data-wow-delay="0.22s">
+					<img class="img-float-left" src="img/image2.png" alt="image2">
 				</div>
 
+				<div class="col-sm-6 in-order-2 sm-6-content wow animated fadeInRight" data-wow-delay="0.22s">
+					<h1>Plan your day in a timeline</h1>
+					<p>Wikly offers numerous visual ways to view and manage your daily tasks for greater efficiency. It is an easy-to-use, versatile, effective, and user-friendly tool that everyone can use to maintain a daily schedule.</p>
+				</div>
+
+				<div class="col-sm-6 in-order-3 sm-6-content wow animated fadeInLeft" data-wow-delay="0.22s">
+					<h1>Focus with reminders and widgets</h1>
+					<p>With Wikly's reminders and widgets, you can stay on top of your schedule at any time. Wikly will remind you before a task starts or ends, and all of your upcoming tasks will be displayed in beautiful widgets on your home screen.</p>
+				</div>
+
+				<div class="col-sm-6 in-order-4 wow animated fadeInRight" data-wow-delay="0.22s">
+					<img class="img-float-right" src="img/image4.png" alt="image4">
+				</div>
+
+				<div class="col-sm-6 in-order-1 wow animated fadeInLeft" data-wow-delay="0.22s">
+					<img class="img-float-left" src="img/image5.png" alt="image5">
+				</div>
+
+				<div class="col-sm-6 in-order-2 sm-6-content wow animated fadeInRight" data-wow-delay="0.22s">
+					<h1>Effortless create tasks in seconds</h1>
+					<p>You can create a task in a few seconds, and all you need to do is choose the people involved and add an appropriate title. You can also include a time and a duration. You can even add sub-tasks, colors, tags, and a description.</p>
+				</div>
 
 
 
@@ -215,27 +237,26 @@
 													  REVIEWS
 		 ========================================================================================================== -->
 
-	<div id="fh5co-reviews" class="fh5co-reviews-outer">
+	<!-- <div id="fh5co-reviews" class="fh5co-reviews-outer">
 		<h1>What people are saying</h1>
 		<small>Reviews</small>
 		<div class="container fh5co-reviews-inner">
 			<div class="row justify-content-center">
 				<div class="col-sm-5 wow fadeIn animated" data-wow-delay="0.25s">
-					<img class="float-left" src="img/quotes-1.jpg" alt="Quote 1">
-					<p class="testimonial-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique quasi.</p>
+					<img class="float-left" src="img/quotes-1.png" alt="Quote 1">
+					<p class="testimonial-desc">Saved my life! A must-have tool for everyone.</p>
 					<small class="testimonial-author">John Doe</small>
-					<img class="float-right" src="img/quotes-2.jpg" alt="Quote 2">
+					<img class="float-right" src="img/quotes-2.png" alt="Quote 2">
 				</div>
 				<div class="col-sm-5 testimonial-2 wow fadeIn animated" data-wow-delay="0.67s">
-					<img class="float-left" src="img/quotes-1.jpg" alt="Quote 1">
-					<p class="testimonial-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique quasi.</p>
+					<img class="float-left" src="img/quotes-1.png" alt="Quote 1">
+					<p class="testimonial-desc">Life changing app, just incredible.</p>
 					<small class="testimonial-author">Someone</small>
-					<img class="float-right" src="img/quotes-2.jpg" alt="Quote 2">
+					<img class="float-right" src="img/quotes-2.png" alt="Quote 2">
 				</div>
 			</div>
-
 		</div>
-	</div>
+	</div> -->
 	
 
 	<!-- ==========================================================================================================
@@ -247,16 +268,15 @@
 			<div class="container fh5co-bottom-inner">
 				<div class="row">
 					<div class="col-sm-6">
-						<h1>How to download the app?</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque suscipit, similique animi saepe, ipsam itaque, tempore minus maxime pariatur error unde fugit tenetur.</p>
+						<h1>Download Wikly</h1>
+						<p>Wikly is available on iOS and iPadOS</p>
 						<a class="wow fadeIn animated" data-wow-delay="0.25s" href="#"><img class="app-store-btn" src="img/app-store-icon.png" alt="App Store Icon"></a>
-						<a class="wow fadeIn animated" data-wow-delay="0.67s" href="#"><img class="google-play-btn" src="img/google-play-icon.png" alt="Google Play Icon"></a>
+						<!-- <a class="wow fadeIn animated" data-wow-delay="0.67s" href="#"><img class="google-play-btn" src="img/google-play-icon.png" alt="Google Play Icon"></a> -->
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 
 	<!-- ==========================================================================================================
                                                SECTION 7 - SUB FOOTER
@@ -267,7 +287,7 @@
 
 			<div class="footer-three-grid wow fadeIn animated" data-wow-delay="0.66s">
 				<div class="column-1-3">
-					<h1>App</h1>
+					<h1>Wikly</h1>
 				</div>
 				<div class="column-2-3">
 					<nav class="footer-nav">
@@ -279,22 +299,21 @@
 						</ul>
 					</nav>
 				</div>
-				<div class="column-3-3">
+				<!-- <div class="column-3-3">
 					<div class="social-icons-footer">
 						<a href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
 						<a href="https://freehtml5.co"><i class="fab fa-instagram"></i></a>
 						<a href="https://www.twitter.com/fh5co"><i class="fab fa-twitter"></i></a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 
 			<span class="border-bottom-footer"></span>
 
-			<p class="copyright">&copy; 2018 App. All rights reserved. Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5</a>.</p>
+			<p class="copyright">&copy; 2022 Wikly. All rights reserved.</p>
 
 		</div>
 	</footer>
-
 
 
 
