added app store link for download

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					<div class="col-sm-6">
 						<h1>Download Wikly</h1>
 						<p>Wikly is available on iOS and iPadOS</p>
-						<a class="wow fadeIn animated" data-wow-delay="0.25s" href="#"><img class="app-store-btn" src="img/app-store-icon.png" alt="App Store Icon"></a>
+						<a class="wow fadeIn animated" data-wow-delay="0.25s" href="https://apps.apple.com/us/app/wikly/id1583275512"><img class="app-store-btn" src="img/app-store-icon.png" alt="App Store Icon"></a>
 						<!-- <a class="wow fadeIn animated" data-wow-delay="0.67s" href="#"><img class="google-play-btn" src="img/google-play-icon.png" alt="Google Play Icon"></a> -->
 					</div>
 				</div>
