--- a/todoable/privacy/index.html
+++ b/todoable/privacy/index.html
@@ -3,11 +3,11 @@
     <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
-      <title>Privacy Policy</title>
+      <title>Privacy Policy - Todoable</title>
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <strong>Privacy Policy</strong> <p>
+    <strong>Privacy Policy - Todoable</strong> <p>
                   Harry Patsis built the Todoable app as
                   a Commercial app. This SERVICE is provided by
                   Harry Patsis  and is intended for use as
