--- a/todoable/terms/index.html
+++ b/todoable/terms/index.html
@@ -7,7 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <strong>Terms &amp; Conditions</strong> <p>
+    <strong>Terms &amp; Conditions - Todoable</strong> <p>
                   By downloading or using the app, these terms will
                   automatically apply to you – you should make sure therefore
                   that you read them carefully before using the app. You’re not
