--- a/todoable/privacy/index.html
+++ b/todoable/privacy/index.html
@@ -34,10 +34,11 @@
                 </p> <div><p>
                     The app does use third-party services that may collect
                     information used to identify you.
-                  </p> <p>
+                </p> <p>
                     Link to the privacy policy of third-party service providers used
                     by the app
-                  </p> <ul><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li></ul></div> <p><strong>Log Data</strong></p> <p>
+                  </p> <ul><li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li></ul></div> 
+                <p><strong>Log Data</strong></p> <p>
                   I want to inform you that whenever you
                   use my Service, in a case of an error in the app
                   I collect data and information (through third-party
