--- a/todoable/terms/index.html
+++ b/todoable/terms/index.html
@@ -1,113 +1,139 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Terms &amp; Conditions</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-    <strong>Terms &amp; Conditions - Todoable</strong> <p>
-                  By downloading or using the app, these terms will
-                  automatically apply to you – you should make sure therefore
-                  that you read them carefully before using the app.<br> You’re not
-                  allowed to copy or modify the app, any part of the app, or
-                  our trademarks in any way.<br> You’re not allowed to attempt to
-                  extract the source code of the app, and you also shouldn’t try
-                  to translate the app into other languages or make derivative
-                  versions.<br> The app itself, and all the trademarks, copyright,
-                  database rights, and other intellectual property rights related
-                  to it, still belong to Harry Patsis.
-                </p> <p>
-                  Harry Patsis is committed to ensuring that the app is
-                  as useful and efficient as possible. For that reason, we
-                  reserve the right to make changes to the app or to charge for
-                  its services, at any time and for any reason.<br>  We will never
-                  charge you for the app or its services without making it very
-                  clear to you exactly what you’re paying for.
-                </p> <p>
-                  The Todoable app stores and processes personal data that
-                  you have provided to us, to provide my
-                  Service. It’s your responsibility to keep your phone and
-                  access to the app secure.<br>  We therefore recommend that you do
-                  not jailbreak or root your phone, which is the process of
-                  removing software restrictions and limitations imposed by the
-                  official operating system of your device.<br>  It could make your
-                  phone vulnerable to malware/viruses/malicious programs,
-                  compromise your phone’s security features and it could mean
-                  that the Todoable app won’t work properly or at all.
-                </p> <div><p>
-                    The app does use third-party services that declare their
-                    Terms and Conditions.
-                </p> <p>
-                    Link to Terms and Conditions of third-party service
-                    providers used by the app
-                </p> <ul><li><a href="https://www.revenuecat.com/terms" target="_blank" rel="noopener noreferrer">RevenueCat</a></li></ul></div> <p>
-                  You should be aware that there are certain things that
-                  Harry Patsis will not take responsibility for. Certain
-                  functions of the app will require the app to have an active
-                  internet connection. The connection can be Wi-Fi or provided
-                  by your mobile network provider, but Harry Patsis
-                  cannot take responsibility for the app not working at full
-                  functionality if you don’t have access to Wi-Fi, and you don’t
-                  have any of your data allowance left.
-                </p> <p></p> <p>
-                  If you’re using the app outside of an area with Wi-Fi, you
-                  should remember that the terms of the agreement with your
-                  mobile network provider will still apply. As a result, you may
-                  be charged by your mobile provider for the cost of data for
-                  the duration of the connection while accessing the app, or
-                  other third-party charges. In using the app, you’re accepting
-                  responsibility for any such charges, including roaming data
-                  charges if you use the app outside of your home territory
-                  (i.e. region or country) without turning off data roaming. If
-                  you are not the bill payer for the device on which you’re
-                  using the app, please be aware that we assume that you have
-                  received permission from the bill payer for using the app.
-                </p> <p>
-                  Along the same lines, Harry Patsis cannot always take
-                  responsibility for the way you use the app i.e. You need to
-                  make sure that your device stays charged – if it runs out of
-                  battery and you can’t turn it on to avail the Service,
-                  Harry Patsis cannot accept responsibility.
-                </p> <p>
-                  With respect to Harry Patsis’s responsibility for your
-                  use of the app, when you’re using the app, it’s important to
-                  bear in mind that although we endeavor to ensure that it is
-                  updated and correct at all times, we do rely on third parties
-                  to provide information to us so that we can make it available
-                  to you. Harry Patsis accepts no liability for any
-                  loss, direct or indirect, you experience as a result of
-                  relying wholly on this functionality of the app.
-                </p> <p>
-                  At some point, we may wish to update the app. The app is
-                  currently available on iOS – the requirements for the 
-                  system(and for any additional systems we
-                  decide to extend the availability of the app to) may change,
-                  and you’ll need to download the updates if you want to keep
-                  using the app. Harry Patsis does not promise that it
-                  will always update the app so that it is relevant to you
-                  and/or works with the iOS version that you have
-                  installed on your device. However, you promise to always
-                  accept updates to the application when offered to you, We may
-                  also wish to stop providing the app, and may terminate use of
-                  it at any time without giving notice of termination to you.
-                  Unless we tell you otherwise, upon any termination, (a) the
-                  rights and licenses granted to you in these terms will end;
-                  (b) you must stop using the app, and (if needed) delete it
-                  from your device.
-                </p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
-                  I may update our Terms and Conditions
-                  from time to time. Thus, you are advised to review this page
-                  periodically for any changes. I will
-                  notify you of any changes by posting the new Terms and
-                  Conditions on this page.
-                </p> <p>
-                  These terms and conditions are effective as of 2022-03-14
-                </p> <p><strong>Contact Us</strong></p> <p>
-                  If you have any questions or suggestions about my
-                  Terms and Conditions, do not hesitate to contact me
-                  at todoable.app@gmail.com.
-    </body>
-    </html>
-      
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Legal Documents</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        .legal-doc {
+            background: white;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 40px;
+        }
+        h1 {
+            color: #2c3e50;
+            font-size: 2em;
+            margin-bottom: 1em;
+            padding-bottom: 0.5em;
+            border-bottom: 2px solid #eee;
+        }
+        h2 {
+            color: #34495e;
+            font-size: 1.5em;
+            margin-top: 1.5em;
+            margin-bottom: 0.8em;
+        }
+        h3 {
+            color: #445566;
+            font-size: 1.2em;
+            margin-top: 1.2em;
+        }
+        ul, ol {
+            padding-left: 1.5em;
+        }
+        li {
+            margin-bottom: 0.5em;
+        }
+        .last-updated {
+            color: #666;
+            font-style: italic;
+            margin-bottom: 2em;
+        }
+        .section {
+            margin-bottom: 2em;
+        }
+        .contact-info {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
+            margin: 20px 0;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 15px;
+            }
+            .legal-doc {
+                padding: 20px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <!-- Terms and Conditions -->
+    <div class="legal-doc" id="terms">
+        <h1>Terms and Conditions</h1>
+        <p class="last-updated">Last updated: [Current Date]</p>
+
+        <div class="section">
+            <h2>1. Agreement to Terms</h2>
+            <p>By downloading, installing, or using our iOS application ("App"), you agree to be bound by these Terms and Conditions. If you disagree with any part of these terms, you do not have permission to access the App.</p>
+        </div>
+
+        <div class="section">
+            <h2>2. Subscriptions and Payments</h2>
+            <h3>2.1 Subscription Terms</h3>
+            <ul>
+                <li>Subscriptions are billed on a recurring basis through Apple's App Store</li>
+                <li>Prices are displayed in the App and may vary by region</li>
+                <li>Subscription periods may be monthly, yearly, or as otherwise specified</li>
+                <li>Free trials automatically convert to paid subscriptions unless cancelled</li>
+            </ul>
+
+            <h3>2.2 Billing and Cancellation</h3>
+            <ul>
+                <li>All payments are processed through Apple's App Store</li>
+                <li>Subscriptions automatically renew unless cancelled at least 24 hours before renewal</li>
+                <li>Cancellations and refunds are managed through your Apple ID settings</li>
+                <li>No refunds for partial subscription periods</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>3. User Account</h2>
+            <h3>3.1 Account Responsibility</h3>
+            <p>You are responsible for:</p>
+            <ul>
+                <li>Maintaining account confidentiality</li>
+                <li>All activities under your account</li>
+                <li>Notifying us of unauthorized access</li>
+                <li>Keeping account information current</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>4. Prohibited Activities</h2>
+            <p>You may not:</p>
+            <ul>
+                <li>Modify, reverse engineer, or hack the App</li>
+                <li>Remove copyright or proprietary notices</li>
+                <li>Use the App for illegal purposes</li>
+                <li>Share account credentials</li>
+                <li>Interfere with App security</li>
+                <li>Create multiple accounts</li>
+                <li>Use automated systems to access the App</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>5. Contact Information</h2>
+            <div class="contact-info">
+                <p>For questions about these terms:</p>
+                <ul>
+                    <li>Email: todoable.app@gmail.com</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
