--- a/todoable/terms/index.html
+++ b/todoable/terms/index.html
@@ -73,7 +73,7 @@
     <!-- Terms and Conditions -->
     <div class="legal-doc" id="terms">
         <h1>Terms and Conditions</h1>
-        <p class="last-updated">Last updated: [Current Date]</p>
+        <p class="last-updated">Last updated: November 1, 2024</p>
 
         <div class="section">
             <h2>1. Agreement to Terms</h2>
