--- a/todoable/help/help.html
+++ b/todoable/help/help.html
@@ -10,7 +10,7 @@
         async function loadContent() {
             const params = new URLSearchParams(window.location.search);
             const requestedLocale = params.get('locale') || DEFAULT_LOCALE;
-            const page = params.get('page') || 'help';
+            const page = params.get('page');
             
             const locale = SUPPORTED_LOCALES.includes(requestedLocale) ? requestedLocale : DEFAULT_LOCALE;
             const container = document.getElementById('content');
@@ -18,7 +18,7 @@
             try {
                 const response = await fetch(`/${page}/${locale}.html`);
                 if (!response.ok) {
-                    container.innerHTML = `<p>Page "${page}" not found</p>`;
+                    container.innerHTML = `<p>Page "/${page}/${locale}" not found</p>`;
                     return;
                 }
                 
