--- a/todoable/help/help.html
+++ b/todoable/help/help.html
@@ -27,7 +27,7 @@
                 if (locale !== requestedLocale) {
                     container.insertAdjacentHTML('beforebegin', 
                         '<div style="background: #fff3cd; padding: 10px; margin-bottom: 10px;">
-                            Language '${requestedLocale}' not available. Showing ${locale} version.
+                            Language ${requestedLocale} not available. Showing ${locale} version.
                         </div>'
                     );
                 }
