--- a/todoable/help/findtime/en.html
+++ b/todoable/help/findtime/en.html
@@ -2,48 +2,92 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Localized Page</title>
-    <script>
-        const translations = {
-            en: {
-                welcome: "Welcome",
-                description: "This is a localized website",
-                button: "Click me"
-            },
-            es: {
-                welcome: "Bienvenido",
-                description: "Este es un sitio web localizado",
-                button: "Haz clic"
-            },
-            fr: {
-                welcome: "Bienvenue",
-                description: "Ceci est un site web localisé",
-                button: "Cliquez ici"
-            }
-        };
-
-        function updateContent() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const locale = urlParams.get('locale') || 'en';
-            const text = translations[locale] || translations.en;
-
-            document.getElementById('welcome').textContent = text.welcome;
-            document.getElementById('description').textContent = text.description;
-            document.getElementById('button').textContent = text.button;
+    <title>Find Free Time - Help</title>
+    <style>
+        body {
+            font-family: system-ui, -apple-system, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
         }
-
-        window.onload = updateContent;
-    </script>
+        .example {
+            background: #f5f5f5;
+            border-left: 4px solid #2563eb;
+            padding: 15px;
+            margin: 15px 0;
+        }
+        .tip {
+            background: #ecfdf5;
+            border-radius: 6px;
+            padding: 12px;
+            margin: 15px 0;
+        }
+        img {
+            max-width: 100%;
+            border: 1px solid #e5e7eb;
+            border-radius: 8px;
+        }
+    </style>
 </head>
-<body style="font-family: Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px;">
-    <h1 id="welcome"></h1>
-    <p id="description"></p>
-    <button id="button"></button>
+<body>
+    <h1>Find Free Time</h1>
+    
+    <h2>What is Find Free Time?</h2>
+    <p>Find Free Time helps you identify available time slots in your schedule for new tasks and meetings. It analyzes your existing commitments and suggests the best times to schedule new activities.</p>
 
-    <div style="margin-top: 20px;">
-        <a href="?locale=en">English</a> |
-        <a href="?locale=es">Español</a> |
-        <a href="?locale=fr">Français</a>
+    <div class="tip">
+        <strong>Quick Tip:</strong> Use this feature when you need to schedule focused work time or find meeting slots that don't conflict with your existing schedule.
+    </div>
+
+    <h2>How to Use</h2>
+    <ol>
+        <li><strong>Access the Feature</strong>
+            <p>Click the "Find Free Time" button in the top navigation bar or use the keyboard shortcut ⌘/Ctrl + F.</p>
+        </li>
+        
+        <li><strong>Set Your Parameters</strong>
+            <ul>
+                <li>Duration: How long you need (30min, 1hr, 2hrs, etc.)</li>
+                <li>Time Range: Which days to search</li>
+                <li>Working Hours: Your preferred working time</li>
+            </ul>
+        </li>
+
+        <li><strong>Review Suggestions</strong>
+            <p>The system will show available time slots, sorted by best fit. Green slots indicate optimal times based on your energy levels and past productivity patterns.</p>
+        </li>
+    </ol>
+
+    <div class="example">
+        <h3>Example Use Case</h3>
+        <p>You need 2 hours for focused work on a project:</p>
+        <ol>
+            <li>Click "Find Free Time"</li>
+            <li>Set Duration: 2 hours</li>
+            <li>Set Range: Next 3 workdays</li>
+            <li>Set Hours: 9 AM - 5 PM</li>
+            <li>Result: System suggests available 2-hour blocks within your parameters</li>
+        </ol>
+    </div>
+
+    <h2>Advanced Features</h2>
+    <ul>
+        <li><strong>Energy Levels</strong>: Toggle "Consider Energy Levels" to find times when you're typically most productive</li>
+        <li><strong>Buffer Time</strong>: Add padding before/after to avoid back-to-back commitments</li>
+        <li><strong>Recurring Slots</strong>: Find regular time slots for recurring tasks</li>
+    </ul>
+
+    <h2>Troubleshooting</h2>
+    <ul>
+        <li><strong>No Results?</strong> Try expanding your date range or reducing the duration</li>
+        <li><strong>Unexpected Slots?</strong> Check your calendar sync status</li>
+        <li><strong>Need More Options?</strong> Toggle "Show More Times" for additional suggestions</li>
+    </ul>
+
+    <div class="tip">
+        <strong>Pro Tip:</strong> Use the "Optimize for Focus Time" setting to find slots with minimal interruptions.
     </div>
 </body>
 </html>
