--- a/todoable/help/findtime/en.html
+++ b/todoable/help/findtime/en.html
@@ -3,91 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Find Free Time - Help</title>
-    <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-        }
-        .example {
-            background: #f5f5f5;
-            border-left: 4px solid #2563eb;
-            padding: 15px;
-            margin: 15px 0;
-        }
-        .tip {
-            background: #ecfdf5;
-            border-radius: 6px;
-            padding: 12px;
-            margin: 15px 0;
-        }
-        img {
-            max-width: 100%;
-            border: 1px solid #e5e7eb;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Find Free Time</h1>
+    <h1>Find Time: Smart schedule with ease</h1>
     
-    <h2>What is Find Free Time?</h2>
-    <p>Find Free Time helps you identify available time slots in your schedule for new tasks and meetings. It analyzes your existing commitments and suggests the best times to schedule new activities.</p>
+    <h2>What is Find Time?</h2>
+    <p>Find Time helps you identify available time slots in your schedule for new tasks, family meetings, shared activities, or any other event that requires coordinating schedules.</p>
 
-    <div class="tip">
-        <strong>Quick Tip:</strong> Use this feature when you need to schedule focused work time or find meeting slots that don't conflict with your existing schedule.
-    </div>
-
-    <h2>How to Use</h2>
+    <h2>Here's how it works:</h2>
     <ol>
-        <li><strong>Access the Feature</strong>
-            <p>Click the "Find Free Time" button in the top navigation bar or use the keyboard shortcut ⌘/Ctrl + F.</p>
+        <li><strong>Select Participants</strong>
+            <p>Choose the family members or individuals who need to be available for the scheduled event.</p>
         </li>
         
-        <li><strong>Set Your Parameters</strong>
-            <ul>
-                <li>Duration: How long you need (30min, 1hr, 2hrs, etc.)</li>
-                <li>Time Range: Which days to search</li>
-                <li>Working Hours: Your preferred working time</li>
-            </ul>
+        <li><strong>Choose Time Preference</strong>
+			<p>Select "Morning" or "Afternoon" to narrow down the search.</p>
         </li>
+		
+		<li><strong>View Availability</strong>
+			<ul>
+				<li><strong>Highlighted slots:</strong> Indicate available times for all selected participants.</li>
+				<li><strong>Empty slots:</strong> Indicate times when at least one participant is unavailable.</li>
+				<li><strong>Grayed out slots:</strong> Indicate passed times.</li>
+			</ul>
+		</li>
+		<br>
+		<li><strong>Select day and time</strong>
+			<p>Click on a highlighted time slot that works best for everyone.</p>
+		</li>
 
-        <li><strong>Review Suggestions</strong>
-            <p>The system will show available time slots, sorted by best fit. Green slots indicate optimal times based on your energy levels and past productivity patterns.</p>
+        <li><strong>Create task</strong>
+            <p>Once you've selected a time, follow the instructions to easily add a new task to your to-do list for that specific time slot.</p>
         </li>
     </ol>
 
-    <div class="example">
-        <h3>Example Use Case</h3>
-        <p>You need 2 hours for focused work on a project:</p>
-        <ol>
-            <li>Click "Find Free Time"</li>
-            <li>Set Duration: 2 hours</li>
-            <li>Set Range: Next 3 workdays</li>
-            <li>Set Hours: 9 AM - 5 PM</li>
-            <li>Result: System suggests available 2-hour blocks within your parameters</li>
-        </ol>
+    <div class="tip">
+        <h3>Tips</h3>
+		<ul>
+        <li>For best results, ensure all participants have their schedules accurately updated within the app. "Find Time" considers existing tasks 			and appointments when determining availability.</li>
+		<li>Scroll the dates to find time in the following weeks or months.</li>
+		<li> Adjust the time preference (morning/afternoon) or change the selected participants to refine your search.</li>
+	</ul>
     </div>
 
-    <h2>Advanced Features</h2>
-    <ul>
-        <li><strong>Energy Levels</strong>: Toggle "Consider Energy Levels" to find times when you're typically most productive</li>
-        <li><strong>Buffer Time</strong>: Add padding before/after to avoid back-to-back commitments</li>
-        <li><strong>Recurring Slots</strong>: Find regular time slots for recurring tasks</li>
-    </ul>
-
-    <h2>Troubleshooting</h2>
-    <ul>
-        <li><strong>No Results?</strong> Try expanding your date range or reducing the duration</li>
-        <li><strong>Unexpected Slots?</strong> Check your calendar sync status</li>
-        <li><strong>Need More Options?</strong> Toggle "Show More Times" for additional suggestions</li>
-    </ul>
-
-    <div class="tip">
-        <strong>Pro Tip:</strong> Use the "Optimize for Focus Time" setting to find slots with minimal interruptions.
+    <div>
+        <p> Enjoy the convenience of "Find Time" and schedule your family events with ease!</p>
     </div>
 </body>
 </html>
