--- a/todoable/help/help.html
+++ b/todoable/help/help.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Dynamic Content</title>
+    <style>
+        body {
+            font-family: system-ui, -apple-system, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
+        }
+        .example {
+            background: #f5f5f5;
+            border-left: 4px solid #2563eb;
+            padding: 15px;
+            margin: 15px 0;
+        }
+        .tip {
+            background: #f5f5f5;
+            border-radius: 6px;
+            padding: 0px 15px;
+        }
+        img {
+            max-width: 100%;
+            border: 1px solid #e5e7eb;
+            border-radius: 8px;
+        }
+    </style>
     <script>
-        const SUPPORTED_LOCALES = ['en'];
+        const SUPPORTED_LOCALES = ['en','fr','de','es','gr'];
         const DEFAULT_LOCALE = 'en';
 
         async function loadContent() {
