help pages ready for english, french, german, spanish and greek

--- a/todoable/help/findtime/de.html
+++ b/todoable/help/findtime/de.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Freie Zeit Finden - Hilfe</title>
-    <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-        }
-        .example {
-            background: #f5f5f5;
-            border-left: 4px solid #2563eb;
-            padding: 15px;
-            margin: 15px 0;
-        }
-        .tip {
-            background: #f5f5f5;
-            border-radius: 6px;
-            padding: 0px 15px;
-        }
-        img {
-            max-width: 100%;
-            border: 1px solid #e5e7eb;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Freie Zeit Finden: Planen Sie Ihre Termine einfach</h1>
+    <h1>Zeit finden: Intelligenter Zeitplan/h1>
     
     <h2>Was ist "Freie Zeit Finden"?</h2>
     <p>"Freie Zeit Finden" hilft Ihnen dabei, verfügbare Zeitfenster in Ihrem Zeitplan zu identifizieren, um neue Aufgaben, Familientreffen, gemeinsame Aktivitäten oder andere Ereignisse zu koordinieren.</p>
