--- a/todoable/help/findtime/en.html
+++ b/todoable/help/findtime/en.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Find Free Time - Help</title>
+    <title>Find Time - Help</title>
 </head>
 <body>
-    <h1>Find Time: Smart schedule with ease</h1>
+    <h1>Find Time: Smart schedule</h1>
     
     <h2>What is Find Time?</h2>
     <p>Find Time helps you identify available time slots in your schedule for new tasks, family meetings, shared activities, or any other event that requires coordinating schedules.</p>
