--- a/todoable/help/findtime/es.html
+++ b/todoable/help/findtime/es.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Encontrar Tiempo Libre - Ayuda</title>
-    <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-        }
-        .example {
-            background: #f5f5f5;
-            border-left: 4px solid #2563eb;
-            padding: 15px;
-            margin: 15px 0;
-        }
-        .tip {
-            background: #f5f5f5;
-            border-radius: 6px;
-            padding: 0px 15px;
-        }
-        img {
-            max-width: 100%;
-            border: 1px solid #e5e7eb;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Encontrar Tiempo: Organiza tu horario fácilmente</h1>
+    <h1>Encontrar Tiempo: Horario inteligente</h1>
     
     <h2>¿Qué es "Encontrar Tiempo"?</h2>
     <p>"Encontrar Tiempo" te ayuda a identificar espacios disponibles en tu horario para agregar nuevas tareas, reuniones familiares, actividades compartidas u otros eventos que requieran coordinación.</p>
