--- a/todoable/help/findtime/fr.html
+++ b/todoable/help/findtime/fr.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Trouver du Temps Libre - Aide</title>
-    <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-        }
-        .example {
-            background: #f5f5f5;
-            border-left: 4px solid #2563eb;
-            padding: 15px;
-            margin: 15px 0;
-        }
-        .tip {
-            background: #f5f5f5;
-            border-radius: 6px;
-            padding: 0px 15px;
-        }
-        img {
-            max-width: 100%;
-            border: 1px solid #e5e7eb;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Trouver du Temps : Organisez votre emploi du temps facilement</h1>
+    <h1>Trouver du Temps : Horaire intelligent</h1>
     
     <h2>Qu'est-ce que "Trouver du Temps" ?</h2>
     <p>"Trouver du Temps" vous aide à identifier des créneaux horaires disponibles dans votre emploi du temps pour de nouvelles tâches, des réunions familiales, des activités partagées ou tout autre événement nécessitant une coordination des emplois du temps.</p>
