--- a/todoable/help/findtime/gr.html
+++ b/todoable/help/findtime/gr.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Βρείτε Ελεύθερο Χρόνο - Βοήθεια</title>
-    <style>
-        body {
-            font-family: system-ui, -apple-system, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-        }
-        .example {
-            background: #f5f5f5;
-            border-left: 4px solid #2563eb;
-            padding: 15px;
-            margin: 15px 0;
-        }
-        .tip {
-            background: #f5f5f5;
-            border-radius: 6px;
-            padding: 0px 15px;
-        }
-        img {
-            max-width: 100%;
-            border: 1px solid #e5e7eb;
-            border-radius: 8px;
-        }
-    </style>
 </head>
 <body>
-    <h1>Βρείτε Ελεύθερο Χρόνο: Οργανώστε το πρόγραμμά σας εύκολα</h1>
+    <h1>Βρείτε Χρόνο: Έξυπνο πρόγραμμα</h1>
     
     <h2>Τι είναι το "Βρείτε Ελεύθερο Χρόνο";</h2>
     <p>Το "Βρείτε Ελεύθερο Χρόνο" σας βοηθά να εντοπίσετε διαθέσιμες ώρες στο πρόγραμμά σας για να προγραμματίσετε νέες εργασίες, οικογενειακές συναντήσεις, κοινές δραστηριότητες ή άλλα γεγονότα που απαιτούν συντονισμό.</p>
