--- a/todoable/help/findtime/fr.html
+++ b/todoable/help/findtime/fr.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Trouver du Temps Libre - Aide</title>
+    <title>Trouver le Temps Libre - Aide</title>
 </head>
 <body>
-    <h1>Trouver du Temps : Horaire intelligent</h1>
+    <h1>Trouver le Temps : Horaire intelligent</h1>
     
-    <h2>Qu'est-ce que "Trouver du Temps" ?</h2>
-    <p>"Trouver du Temps" vous aide à identifier des créneaux horaires disponibles dans votre emploi du temps pour de nouvelles tâches, des réunions familiales, des activités partagées ou tout autre événement nécessitant une coordination des emplois du temps.</p>
+    <h2>Qu'est-ce que "Trouver le Temps" ?</h2>
+    <p>"Trouver le Temps" vous aide à identifier des créneaux horaires disponibles dans votre emploi le temps pour de nouvelles tâches, des réunions familiales, des activités partagées ou tout autre événement nécessitant une coordination des emplois le temps.</p>
 
     <h2>Comment ça marche :</h2>
     <ol>
@@ -40,14 +40,14 @@
     <div class="tip">
         <h3>Conseils</h3>
 		<ul>
-        <li>Pour de meilleurs résultats, assurez-vous que tous les participants ont mis à jour leurs horaires avec précision dans l'application. "Trouver du Temps" prend en compte les tâches et rendez-vous existants pour déterminer les disponibilités.</li>
+        <li>Pour de meilleurs résultats, assurez-vous que tous les participants ont mis à jour leurs horaires avec précision dans l'application. "Trouver le Temps" prend en compte les tâches et rendez-vous existants pour déterminer les disponibilités.</li>
 		<li>Faites défiler les dates pour trouver des créneaux dans les semaines ou mois suivants.</li>
 		<li>Ajustez la préférence horaire (matin/après-midi) ou changez les participants sélectionnés pour affiner votre recherche.</li>
 	</ul>
     </div>
 
     <div>
-        <p>Profitez de la commodité de "Trouver du Temps" et organisez vos événements familiaux en toute simplicité !</p>
+        <p>Profitez de la commodité de "Trouver le Temps" et organisez vos événements familiaux en toute simplicité !</p>
     </div>
 </body>
 </html>
